Lombok references + startup/query performance for MSA indexing
Fork changes to support Lombok-heavy Spring repos and speed up cold
start and reference queries (used as the Java LSP backend in sari-java):

- CompileBatch: -proc:none -> -proc:full and inject a modern Lombok
  (via LOMBOK_JAR) on the processorpath so annotation-generated members
  (@Getter/@Builder/...) resolve. ReusableCompiler uses a fresh standard
  JavacTask when annotation processing is on (reused Context asserts).
- ReferenceProvider: compile the cursor file's neighborhood (imports +
  same-package) as explicit units so the declaring class is annotation
  processed. For method/constructor call sites, merge the cursor-resolve
  and candidate compiles into a single compile of (importRoots U
  wordIndex(word)); fall back to full neighborhood if resolution fails.
- JavaCompilerService: lazy inverted identifier index (word -> files)
  for O(1) member-reference narrowing.
- InferConfig: skip `mvn dependency:sources`; cache `mvn dependency:list`
  on disk keyed by pom.xml mtime.
- FileStore.list(package) made public.

Measured on a 978-file Lombok repo: cold start 6983ms -> 948ms (warm),
Lombok getter references 0 -> correct, warm reference query ~1.1s.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>